# TDD_Nov_17

./: README.md  York Code Dojo - TDD.pptx
chris_cpp/: CMakeLists.txt  main.cpp
chris_cpp/m3rdparty/: list.cmake
chris_cpp/src/: words.cpp  words.h  words.test.cpp
chris_cpp/tests/: main.cpp
chris_lois_csharp/: Program.cs  words.csproj  words.sln
chris_lois_csharp/Properties/: AssemblyInfo.cs
chris_lois_csharp/WordTests/: UnitTest1.cs  WordTests.csproj
chris_lois_csharp/WordTests/Properties/: AssemblyInfo.cs
david_csharp/: WordChains.sln
david_csharp/WordChains/: BreadthChains.cs  Chains.cs  DepthChains.cs  WordChains.csproj
david_csharp/WordChains.Tests/: ChainTests.cs  WordChains.Tests.csproj
david_csharp/WordChains.Tests/Properties/: AssemblyInfo.cs
david_csharp/WordChains/Properties/: AssemblyInfo.cs
david_csharp/WordChainsUI/: Form1.Designer.cs  Form1.cs  Program.cs  WordChainsUI.csproj
david_csharp/WordChainsUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
solutions/andy_ashlee_kotlin/main/kotlin/co/jfactory/yorktdd/: Words.kt
solutions/andy_ashlee_kotlin/test/kotlin/co/jfactory/yorktdd/: WordTest.kt
